--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "recoil": "^0.4.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
