--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.8",
-    "@types/react-slick": "^0.23.5",
     "@types/styled-components": "^5.1.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
     "recoil": "^0.4.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
